Code changes in html,css

--- a/20th-project/Index.html
+++ b/20th-project/Index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Done.</title>
+    <title>Image Hover</title>
 </head>
 <body>
-    <h1>Hello Bros.</h1>
+    <div class="container">
+        <div class="icon-image">
+            <div class="icon">
+                <img src="Image/img1.jpg" alt="">
+            </div>
+        </div>
+    </div>
 </body>
 </html>
