update the css and html

--- a/20th-project/Index.html
+++ b/20th-project/Index.html
@@ -1,17 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Image Hover</title>
-</head>
-<body>
+    <link rel="stylesheet" href="Style.css" />
+  </head>
+  <body>
     <div class="container">
-        <div class="icon-image">
-            <div class="icon">
-                <img src="Image/img1.jpg" alt="">
-            </div>
+      <div class="icon-image">
+        <div class="icon">
+          <img src="Image/img1.jpg" alt="" />
         </div>
+        <div class="hover-image">
+          <div class="img">
+            <img src="Image/img1.jpg" alt="" />
+          </div>
+          <div class="content">
+            <div class="details">
+                <div class="name">Amelia Oliv</div>
+                <div class="job">Yoga Instructor</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="icon-image">
+        <div class="icon">
+          <img src="Image/img2.jpg" alt="" />
+        </div>
+        <div class="hover-image">
+          <div class="img">
+            <img src="Image/img2.jpg" alt="" />
+          </div>
+          <div class="content">
+            <div class="details">
+                <div class="name">David Marloo</div>
+                <div class="job">Gym Member </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="icon-image">
+        <div class="icon">
+          <img src="Image/img3.jpg" alt="" />
+        </div>
+        <div class="hover-image">
+          <div class="img">
+            <img src="Image/img3.jpg" alt="" />
+          </div>
+          <div class="content">
+            <div class="details">
+                <div class="name">Lima Noah</div>
+                <div class="job">Running Instructor</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="icon-image last">
+        <div class="icon">
+          <img src="Image/img4.jpg" alt="" />
+        </div>
+        <div class="hover-image">
+          <div class="img">
+            <img src="Image/img4.jpg" alt="" />
+          </div>
+          <div class="content">
+            <div class="details">
+                <div class="name">Ava Bridget</div>
+                <div class="job">Female Gym Instructor</div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
